--- a/index.html
+++ b/index.html
@@ -122,56 +122,56 @@
         <div class="portfolio-container">
 
             <div class="portfolio-box">
-                <img src="img/portfolio1.png" alt="">
+                <img src="img/previewLogicaJava.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Backend</h4>
+                    <p>Apostila Manzano e Faccat</p>
+                    <a href="https://github.com/theGabrielSena/exercicioManzano" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="img/portfolio2.png" alt="">
+                <img src="img/previewLogicaJavaScript.jpg" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Backend</h4>
+                    <p>Apostila Manzano e Faccat</p>
+                    <a href="https://github.com/theGabrielSena/exerciciosJavaScript" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="img/portfolio3.png" alt="">
+                <img src="img/previewSite4.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Medcare</h4>
+                    <p>Essa foi a landing page mais completa que desenvolvi até agora</p>
+                    <a href="https://thegabrielsena.github.io/projeto04---MedCare/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="img/portfolio4.png" alt="">
+                <img src="img/previewSite3.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Fruitopia</h4>
+                    <p>Landing page criada para entender a separação dos elementos na navbar</p>
+                    <a href="https://github.com/theGabrielSena/projeto03---Fruitopia" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="img/portfolio5.png" alt="">
+                <img src="img/previewSite2.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>Praroz</h4>
+                    <p>Landing page criada para entender sobre a possibilidade de colocar um texto ou botões sobre uma imagem</p>
+                    <a href="https://github.com/theGabrielSena/projeto02---PraRoz" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
-                <img src="img/portfolio6.png" alt="">
+                <img src="img/previewSite1.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>FrontEnd</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, at?</p>
-                    <a href=" "><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h4>NodeShop</h4>
+                    <p>Primeira landing page criada por mim</p>
+                    <a href="https://thegabrielsena.github.io/projeto01---NodeShop/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
 
